@@ -128,11 +128,11 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @setfilename nco.info
 
 @c Define edition, date, ...
-@set nco-edition 5.3.4-alpha03
-@set doc-edition 5.3.4-alpha03
+@set nco-edition 5.3.4-alpha04
+@set doc-edition 5.3.4-alpha04
 @set copyright-years 1995--2025
 @set update-year 2025
-@set update-date 8 May 2025
+@set update-date 13 May 2025
 @set update-month May 2025
 
 @settitle @acronym{NCO} @value{nco-edition} User Guide
